--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.8",
+    "lottie-react-native": "6.4.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fast-image": "^8.6.3",
     "react-native-get-location": "^4.0.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^14.1.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
